Fix spacing between tags

--- a/app/assets/stylesheets/atomic/atoms/_skill.scss
+++ b/app/assets/stylesheets/atomic/atoms/_skill.scss
@@ -15,6 +15,10 @@
     font-size: 0.875rem;
   }
 
+  &.--withMargin {
+    margin: 0 5px 10px 0;
+  }
+
   &.color-orange {
     background-color: $color__orange-extralight;
     color: $color__orange-main;
